
syntax = "proto3";
import "google/protobuf/any.proto";


option go_package = "kloudlite.io/rpc/jseval";

service JSEval {
  rpc Eval(EvalIn) returns (EvalOut);
}

message EvalIn {
  string init = 1;
  string funName = 4;
  map<string,google.protobuf.Any> inputs = 3;
}

message EvalOut {
  map<string,google.protobuf.Any> output = 3;
}
